--- a/.github/workflows/oidc-test.yml
+++ b/.github/workflows/oidc-test.yml
@@ -1,15 +1,24 @@
-name: OIDC Test
+name: OIDC Token Test
 on:
   workflow_dispatch:
 permissions:
   id-token: write
   contents: read
 jobs:
-  test:
+  test-oidc:
     runs-on: ubuntu-latest
     steps:
-      - name: Get OIDC Token
+      - name: Get OIDC Token with custom audience
         run: |
-          curl -s -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" \
-            "$ACTIONS_ID_TOKEN_REQUEST_URL&audience=api://AzureADTokenExchange" \
-            | jq '.value' | cut -d'.' -f2 | base64 -d 2>/dev/null | jq .
+          echo "=== Default audience ==="
+          TOKEN=$(curl -s -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" \
+            "$ACTIONS_ID_TOKEN_REQUEST_URL" | jq -r '.value')
+          echo "$TOKEN" | cut -d. -f2 | base64 -d 2>/dev/null | jq .
+          echo "=== Custom audience: github/docs ==="
+          TOKEN2=$(curl -s -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" \
+            "${ACTIONS_ID_TOKEN_REQUEST_URL}&audience=https://github.com/github/docs" | jq -r '.value')
+          echo "$TOKEN2" | cut -d. -f2 | base64 -d 2>/dev/null | jq .
+          echo "=== Custom audience: Azure ==="
+          TOKEN3=$(curl -s -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" \
+            "${ACTIONS_ID_TOKEN_REQUEST_URL}&audience=api://AzureADTokenExchange" | jq -r '.value')
+          echo "$TOKEN3" | cut -d. -f2 | base64 -d 2>/dev/null | jq .
